samples/_failures_safe/1761538467_1f3c5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff40bda6.c: In function ‘main’:
./samples/SAFE/__tmp_ff40bda6.c:145:5: error: expected declaration or statement at end of input
  145 |     matrix_fill_sequential(&b);
      |     ^~~~~~~~~~~~~~~~~~~~~~
